--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,13 @@
-== README
+== README 
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Code Challenge Dec 14 2015
 
-Things you may want to cover:
+* Task
 
-* Ruby version
+Design a data model for Ryde (an Uber competitor) fulfilling the following business needs:
 
-* System dependencies
+Enable Ryde to track drivers and cars and car types
+Enable Ryde to track when drivers are available for picking up passengers
+Enable riders to book a ride
+Enable multiple riders to book a shared ride for car types that allow +1 capacity
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
